--- a/wedding-website/src/components/Navbar.css
+++ b/wedding-website/src/components/Navbar.css
@@ -1,11 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script&family=Pinyon+Script&display=swap");
+
 .navbar__container {
-  display: flex;
-  margin-top: 50px;
-  margin-bottom: 50px;
-  height: 100px;
-  justify-content: space-evenly;
+  position: sticky !important;
+  top: 0;
+  overflow: hidden;
+  z-index: 100;
+  background-color: white;
 }
 
-.navbar__link {
-  text-decoration: none;
+.navbar__logo {
+  font-family: "Pinyon Script", cursive;
 }
