--- a/wedding-website/src/components/Rsvp.css
+++ b/wedding-website/src/components/Rsvp.css
@@ -2,6 +2,9 @@
 
 .rsvp__container {
   margin-top: 100px;
+  display: flex;
+  justify-content: "center";
+  align-items: center;
 }
 
 .rsvp__title {
@@ -12,9 +15,23 @@
 
 .rsvp__form {
   display: block;
-  width: 700px;
+  max-width: 700px;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.rsvp__submit {
+  background-color: #141414 !important;
+  color: #fff !important;
+  font-weight: bold;
+  width: 100%;
+  height: 65px;
+  border-radius: 5px;
+  padding-left: 10px;
+  margin-bottom: 50px;
 }
 
 .rsvp__form > input {
@@ -24,10 +41,44 @@
   font-size: large;
   border: 1px lightgray solid;
   border-radius: 5px;
+  padding-left: 10px;
+  margin-top: 5px;
 }
 
 .rsvp__form > input:focus {
   outline: none !important;
   border: 1px solid #a8e6d2;
   box-shadow: 0 0 10px #a8e6d2;
+}
+
+.rsvp__reminder {
+  text-align: center;
+  font-weight: bold;
+  font-size: 30px;
+  color: #772222;
+}
+.rsvp__errors {
+  color: #772222;
+}
+
+.rsvp__success {
+  color: "#000";
+  text-align: center;
+  background-color: #a8e6d2;
+  opacity: 0.9;
+  height: 50px;
+  font-size: 20px;
+  padding-top: 5px;
+  width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  margin-top: 20px;
+}
+
+.rsvp__img {
+  width: 50%;
+  height: auto;
+  flex: 0.5;
 }
