added photos, now need to finish our story

--- a/wedding-website/src/components/Story.css
+++ b/wedding-website/src/components/Story.css
@@ -14,7 +14,7 @@
   align-items: center;
   margin: 20px;
   padding: 10px;
-  /* background-color: #a8e6d2; */
+  background-color: #a8e6d2;
 
   border-radius: 10px;
 }
@@ -51,7 +51,7 @@
   align-items: "center" !important;
   margin: 20px;
   padding: 10px;
-  /* background-color: #a8e6d2; */
+  background-color: #a8e6d2;
 
   border-radius: 10px;
 }
