--- a/wedding-website/src/components/Questions.css
+++ b/wedding-website/src/components/Questions.css
@@ -18,13 +18,13 @@ Button {
 }
 
 .card-body-questions {
-  background-color: #fff;
+  background-color: #a8e6d2;
   border-radius: initial !important;
   font-size: 20px;
 }
 
 #website-link {
-  text-decoration: none !important;
-  color: #a8e6d2;
+  text-decoration: none;
   font-weight: bold !important;
+  width: 300px;
 }
