--- a/wedding-website/src/components/Travel.css
+++ b/wedding-website/src/components/Travel.css
@@ -52,3 +52,136 @@
 .table__row:hover {
   background-color: #e6a8bc;
 }
+
+/* media queries */
+
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) {
+  .travel__container {
+    display: block;
+  }
+  .travel__title {
+    padding-top: 20px;
+    margin-top: unset;
+  }
+
+  .travel__img {
+    width: 100%;
+  }
+
+  .travel__info__container {
+    text-align: left;
+    margin-right: unset;
+    padding: 5px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .travel__info {
+    width: 100%;
+    height: 50px;
+    font-weight: bold;
+    border-radius: 5px;
+  }
+  .travel__info__container > h2 {
+    font-size: 20px;
+  }
+}
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
+  .travel__container {
+    display: block;
+  }
+  .travel__title {
+    padding-top: 20px;
+    margin-top: unset;
+  }
+
+  .travel__img {
+    width: 100%;
+  }
+
+  .travel__info__container {
+    text-align: left;
+    margin-right: unset;
+    padding: 5px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .travel__info {
+    width: 100%;
+    height: 50px;
+    font-weight: bold;
+    border-radius: 5px;
+  }
+  .travel__info__container > h2 {
+    font-size: 20px;
+  }
+}
+
+/* iPad 1, 2, Mini and Air */
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
+  .travel__container {
+    display: block;
+  }
+  .travel__title {
+    padding-top: 20px;
+    margin-top: unset;
+  }
+
+  .travel__img {
+    width: 100%;
+  }
+
+  .travel__info__container {
+    text-align: left;
+    margin-right: unset;
+    padding: 5px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .travel__info {
+    width: 100%;
+    height: 50px;
+    font-weight: bold;
+    border-radius: 5px;
+  }
+  .travel__info__container > h2 {
+    font-size: 20px;
+  }
+}
+
+/* Portrait and Landscape */
+@media only screen and (min-device-width: 834px) and (max-device-width: 1112px) and (-webkit-min-device-pixel-ratio: 2) {
+  .travel__container {
+    display: block;
+  }
+  .travel__title {
+    padding-top: 20px;
+    margin-top: unset;
+  }
+
+  .travel__img {
+    width: 100%;
+  }
+
+  .travel__info__container {
+    text-align: left;
+    margin-right: unset;
+    padding: 5px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .travel__info {
+    width: 100%;
+    height: 50px;
+    font-weight: bold;
+    border-radius: 5px;
+  }
+  .travel__info__container > h2 {
+    font-size: 20px;
+  }
+}
