--- a/wedding-website/src/components/Story.css
+++ b/wedding-website/src/components/Story.css
@@ -21,6 +21,7 @@
 .story__when > p {
   flex: 0.6;
   font-size: 25px;
+  line-height: 38px;
 }
 .story__when > img {
   max-width: 450px !important;
@@ -38,6 +39,7 @@
 .story__where > p {
   flex: 0.6;
   font-size: 25px;
+  line-height: 38px;
 }
 .story__where > img {
   max-width: 450px !important;
@@ -57,6 +59,7 @@
   flex: 0.6;
   align-items: center;
   font-size: 25px;
+  line-height: 38px;
 }
 .story__how > img {
   max-width: 450px !important;
@@ -75,6 +78,7 @@
 .story__outcome > p {
   flex: 0.6;
   font-size: 25px;
+  line-height: 38px;
 }
 
 .story__outcome > img {
