--- a/wedding-website/src/components/Rsvp.css
+++ b/wedding-website/src/components/Rsvp.css
@@ -69,12 +69,13 @@
   height: 50px;
   font-size: 20px;
   padding-top: 5px;
-  width: 700px;
+  max-width: 700px;
   margin-left: auto;
   margin-right: auto;
   border-radius: 5px;
   margin-bottom: 10px;
   margin-top: 20px;
+  display: block;
 }
 
 .rsvp__img {
