disabled rsvp feature

--- a/wedding-website/src/components/Rsvp.css
+++ b/wedding-website/src/components/Rsvp.css
@@ -24,7 +24,7 @@
 }
 
 .rsvp__submit {
-  background-color: #141414 !important;
+  background-color: lightgray !important;
   color: #fff !important;
   font-weight: bold;
   width: 100%;
